// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverflowMenuGroup Below breakpoint but not isPersistent should not show 1`] = `<Component />`;

exports[`OverflowMenuGroup Button group 1`] = `
<Component
  groupType="button"
>
  <div
    className="pf-c-overflow-menu__group pf-m-button-group"
  />
</Component>
`;

exports[`OverflowMenuGroup Icon group 1`] = `
<Component
  groupType="icon"
>
  <div
    className="pf-c-overflow-menu__group pf-m-icon-button-group"
  />
</Component>
`;

exports[`OverflowMenuGroup isPersistent and below breakpoint should still show 1`] = `
<Component
  isPersistent={true}
>
  <div
    className="pf-c-overflow-menu__group"
  />
</Component>
`;
